include $(top_srcdir)/config/common.am

EXTRA_DIST = README.Documentation

docdir = $(pkgdatadir)/doc
dist_doc_DATA = \
	Additional.lyx \
	Customization.lyx \
	Development.lyx \
	DummyTextDocument.txt \
	DummyDocument1.lyx \
	DummyDocument2.lyx \
	EmbeddedObjects.lyx \
	Formula-numbering.lyx \
	Intro.lyx \
	LaTeXConfig.lyx \
	LFUNs.lyx \
	Math.lyx \
	Shortcuts.lyx \
	SpecialParagraphShape.tex \
	Tutorial.lyx \
	UserGuide.lyx

bibliodocdir = $(docdir)/biblio
dist_bibliodoc_DATA = \
	biblio/alphadin.bst \
	biblio/LyXDocs.bib

clipartdocdir = $(docdir)/clipart
dist_clipartdoc_DATA = \
	clipart/escher-lsd.eps \
	clipart/mobius.eps \
	clipart/platypus.eps \
	clipart/Abstract.pdf \
	clipart/BoxInsetDefaultQt4.png \
	clipart/ChangesToolbar.png \
	clipart/ChildDocumentQt4.png \
	clipart/CommentNoteImageQt4.png \
	clipart/endnotes.pdf \
	clipart/ERT.png \
	clipart/ExternalMaterialQt4.png \
	clipart/ExtraToolbar.png \
	clipart/floatQt4.png \
	clipart/footnoteQt4.png \
	clipart/GreyedOutNoteImageQt4.png \
	clipart/labelQt4.png \
	clipart/LaTeX.png \
	clipart/LyXNoteImageQt4.png \
	clipart/macrobox.png \
	clipart/MacroToolbar.png \
	clipart/macrouse.png \
	clipart/referenceQt4.png \
	clipart/SpaceMarker.png \
	clipart/StandardToolbar.png \
	clipart/ToolbarEnvBox.png \
	clipart/ViewToolbar.png \
	clipart/without_fntright.pdf \
	clipart/with_fntright.pdf

cadocdir = $(docdir)/ca
dist_cadoc_DATA = \
	ca/Intro.lyx

csdocdir = $(docdir)/cs
dist_csdoc_DATA = \
	cs/Tutorial.lyx

dadocdir = $(docdir)/da
dist_dadoc_DATA = \
	da/Intro.lyx

dedocdir = $(docdir)/de
dist_dedoc_DATA = \
	de/Additional.lyx \
	de/Customization.lyx \
	de/DummyDocument1.lyx \
	de/DummyDocument2.lyx \
	de/DummyTextDocument.txt \
	de/EmbeddedObjects.lyx \
	de/Formelnummerierung.lyx \
	de/Intro.lyx \
	de/Math.lyx \
	de/Shortcuts.lyx \
	de/Tutorial.lyx \
	de/UserGuide.lyx

declipartdocdir = $(dedocdir)/clipart
dist_declipartdoc_DATA = \
	de/clipart/ERT.png \
	de/clipart/ExternesMaterialQt4.png \
	de/clipart/FussnoteQt4.png \
	de/clipart/GleitobjektQt4.png \
	de/clipart/GrauschriftNotizQt4.png \
	de/clipart/KommentarQt4.png \
	de/clipart/LyXNotizQt4.png \
	de/clipart/Marke.png \
	de/clipart/Querverweis.png \
	de/clipart/StandardBoxQt4.png \
	de/clipart/UnterdokumentQt4.png \
	de/clipart/Zusammenfassung.pdf

eldocdir = $(docdir)/el
dist_eldoc_DATA = \
	el/Intro.lyx

esdocdir = $(docdir)/es
dist_esdoc_DATA = \
	es/Additional.lyx \
	es/Customization.lyx \
	es/DocumentoPostizo1.lyx \
	es/DocumentoPostizo2.lyx \
	es/DocumentoTextoPostizo.txt \
	es/EmbeddedObjects.lyx \
	es/Formula-numbering.lyx \
	es/Intro.lyx \
	es/Math.lyx \
	es/Shortcuts.lyx \
	es/Tutorial.lyx \
	es/UserGuide.lyx

esclipartdocdir = $(esdocdir)/clipart
dist_esclipartdoc_DATA = \
	es/clipart/ComentNotaImagenQt4.png \
	es/clipart/CuadroMinipagQt4.png \
	es/clipart/DocumentoHijoQt4.png \
	es/clipart/es_ERT.png \
	es/clipart/es_ToolbarEnvBox.png \
	es/clipart/etiquetaQt4.png \
	es/clipart/flotanteQt4.png \
	es/clipart/GrisNotaImagenQt4.png \
	es/clipart/MaterialExternoQt4.png \
	es/clipart/NotaLyXImagenQt4.png \
	es/clipart/notapieQt4.png \
	es/clipart/referenciaQt4.png \
	es/clipart/Resumen.pdf

eudocdir = $(docdir)/eu
dist_eudoc_DATA = \
	eu/Intro.lyx \
	eu/Tutorial.lyx

frdocdir = $(docdir)/fr
dist_frdoc_DATA = \
	fr/Additional.lyx \
	fr/Customization.lyx \
	fr/DocumentBidon1.lyx \
	fr/DocumentBidon2.lyx \
	fr/DocumentTexteBidon.txt \
	fr/EmbeddedObjects.lyx \
	fr/Formula-numbering.lyx \
	fr/Intro.lyx \
	fr/Math.lyx \
	fr/Shortcuts.lyx \
	fr/Tutorial.lyx \
	fr/UserGuide.lyx

frclipartdocdir = $(frdocdir)/clipart
dist_frclipartdoc_DATA = \
	fr/clipart/BoxInsetDefaultQt4.png \
	fr/clipart/ChildDocumentQt4.png \
	fr/clipart/CommentNoteImageQt4.png \
	fr/clipart/ERT.png \
	fr/clipart/GreyedOutNoteImageQt4.png \
	fr/clipart/LyXNoteImageQt4.png \
	fr/clipart/floatQt4.png \
	fr/clipart/footnoteQt4.png \
	fr/clipart/labelQt4.png

gldocdir = $(docdir)/gl
dist_gldoc_DATA = \
	gl/Intro.lyx \
	gl/Tutorial.lyx

hedocdir = $(docdir)/he
dist_hedoc_DATA = \
	he/Intro.lyx \
	he/Tutorial.lyx

hudocdir = $(docdir)/hu
dist_hudoc_DATA = \
	hu/Intro.lyx \
	hu/Tutorial.lyx

iddocdir = $(docdir)/id
dist_iddoc_DATA = \
	id/Intro.lyx \
	id/Shortcuts.lyx \
	id/Tutorial.lyx \
	id/UserGuide.lyx

idclipartdocdir = $(iddocdir)/clipart
dist_idclipartdoc_DATA = \
	id/clipart/id-contrib.png \
	id/clipart/id-footnote.png \
	id/clipart/id-lingkungan.png

itdocdir = $(docdir)/it
dist_itdoc_DATA = \
	it/Intro.lyx \
	it/Tutorial.lyx

itclipartdocdir = $(itdocdir)/clipart
dist_itclipartdoc_DATA = \
	it/clipart/it_footnoteQt4.png \
	it/clipart/it_referenceQt4.png

jadocdir = $(docdir)/ja
dist_jadoc_DATA = \
	ja/Additional.lyx \
	ja/Customization.lyx \
	ja/DummyDocument1.lyx \
	ja/DummyDocument2.lyx \
	ja/EmbeddedObjects.lyx \
	ja/Formula-numbering.lyx \
	ja/Intro.lyx \
	ja/LaTeXConfig.lyx \
	ja/Math.lyx \
	ja/Shortcuts.lyx \
	ja/Tutorial.lyx \
	ja/UserGuide.lyx

jaclipartdocdir = $(jadocdir)/clipart
dist_jaclipartdoc_DATA = \
	ja/clipart/BoxInsetDefaultQt4.png \
	ja/clipart/ChildDocumentQt4.png \
	ja/clipart/CommentNoteImageQt4.png \
	ja/clipart/ERT.png \
	ja/clipart/ExternalMaterialQt4.png \
	ja/clipart/floatQt4.png \
	ja/clipart/footnoteQt4.png \
	ja/clipart/GreyedOutNoteImageQt4.png \
	ja/clipart/labelQt4.png \
	ja/clipart/LyXNoteImageQt4.png \
	ja/clipart/macrobox.png \
	ja/clipart/referenceQt4.png \
	ja/clipart/StandardToolbar.png \
	ja/clipart/ToolbarEnvBox.png

nldocdir = $(docdir)/nl
dist_nldoc_DATA = \
	nl/Intro.lyx \
	nl/Tutorial.lyx

nbdocdir = $(docdir)/nb
dist_nbdoc_DATA = \
	nb/Intro.lyx

pldocdir = $(docdir)/pl
dist_pldoc_DATA = \
	pl/Intro.lyx \
	pl/Tutorial.lyx

ptdocdir = $(docdir)/pt
dist_ptdoc_DATA = \
	pt/Intro.lyx \
	pt/Tutorial.lyx

rodocdir = $(docdir)/ro
dist_rodoc_DATA = \
	ro/Intro.lyx

rudocdir = $(docdir)/ru
dist_rudoc_DATA = \
	ru/Intro.lyx \
	ru/Tutorial.lyx

skdocdir = $(docdir)/sk
dist_skdoc_DATA = \
	sk/Intro.lyx \
	sk/Tutorial.lyx

sldocdir = $(docdir)/sl
dist_sldoc_DATA = \
	sl/Intro.lyx \
	sl/Tutorial.lyx

svdocdir = $(docdir)/sv
dist_svdoc_DATA = \
	sv/Intro.lyx \
	sv/Shortcuts.lyx \
	sv/Tutorial.lyx

ukdocdir = $(docdir)/uk
dist_ukdoc_DATA = \
	uk/Intro.lyx

ukclipartdocdir = $(ukdocdir)/clipart
dist_ukclipartdoc_DATA = \
	uk/clipart/FootnoteQT4.png

zhCNdocdir = $(docdir)/zh_CN
dist_zhCNdoc_DATA = \
	zh_CN/Intro.lyx \
	zh_CN/Tutorial.lyx

doc_files = \
	    $(dist_doc_DATA) \
	    $(dist_cadoc_DATA) \
	    $(dist_csdoc_DATA) \
	    $(dist_dadoc_DATA) \
	    $(dist_dedoc_DATA) \
	    $(dist_esdoc_DATA) \
	    $(dist_eudoc_DATA) \
	    $(dist_frdoc_DATA) \
	    $(dist_gldoc_DATA) \
	    $(dist_hedoc_DATA) \
	    $(dist_hudoc_DATA) \
	    $(dist_itdoc_DATA) \
	    $(dist_jadoc_DATA) \
	    $(dist_nbdoc_DATA) \
	    $(dist_nldoc_DATA) \
	    $(dist_pldoc_DATA) \
	    $(dist_ptdoc_DATA) \
	    $(dist_rodoc_DATA) \
	    $(dist_rudoc_DATA) \
	    $(dist_skdoc_DATA) \
	    $(dist_sldoc_DATA) \
	    $(dist_svdoc_DATA) \
	    $(dist_ukdoc_DATA) \
	    $(dist_zhCNdoc_DATA)

install-data-hook:
	for i in $(doc_files); \
	do \
		if $(EGREP) -q "LYX_DIR_VER|LYX_USERDIR_VER|^\\origin " "$(DESTDIR)$(docdir)/$$i"; then \
			origin=`dirname "$(docdir)/$$i"`/; \
			sed -e "s/LYX_DIR_VER/$(LYX_DIR_VER)/g" \
			    -e "s/LYX_USERDIR_VER/$(LYX_USERDIR_VER)/g" \
			    -e "s|^\\\\origin .*|\\\\origin $$origin|" \
				"$(DESTDIR)$(docdir)/$$i" > "$(DESTDIR)$(docdir)/$$i.tmp"; \
			mv -f "$(DESTDIR)$(docdir)/$$i.tmp" "$(DESTDIR)$(docdir)/$$i"; \
			chmod 644 "$(DESTDIR)$(docdir)/$$i"; \
		fi; \
	done
