

all-local:

templates = \
  template.macros.m4  slot.h.m4        \
  func_slot.h.m4      class_slot.h.m4     object_slot.h.m4 \
  basic_signal.h.m4                                        \
  bind.h.m4           rettype.h.m4        convert.h.m4 \
  retbind.h.m4

noinst_HEADERS = $(templates)

EXTRA_DIST =  README $(templates)


MAINTAINERCLEANFILES=$(srcdir)/Makefile.in
